CSS fix for login page, container should be no-wrap. Also make right side background white

--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,7 @@ body {
   background-position: center;
 }
 .login__right-half {
+  background: #fff;
   flex: 0 0 31.25em;
   padding: 1em;
 }
