--- a/sass/pages/_login.scss
+++ b/sass/pages/_login.scss
@@ -13,6 +13,7 @@
 
     &__right-half{
         // flex: 0 0 30%;
+        background: $color-white;
         flex: 0 0 31.25em;
         padding: 1em;
     }
